Code actions (#29)
* quick fix cache

* Document symbol (#21)

* Rewrote code from reference solution

* Add pySymbolKind

* Fix pySymbolKind and add pySymbolName

* Add tests for documentSymbolCommand

* Fix code

* Update pySymbolName

* Added kotlin support and change DocumentSymbolPsiVisitor

* Add kotlin tests

* Fix kotlin tests

* Change visitor logic

* Change functions for work like Pylance

* Rewrote tests for documentSymbol

* Make LspCommand.LOG private

* Change log for DocumentSymbolCommand

* Fix code by comments

* peer review corrections

* Simplify code

* Delete redundant class. Add response structure

Co-authored-by: Sergey.Anchipolevsky <serganch@gmail.com>

* quick fixes first success

* more module exports

* quick fix cache

* Document symbol (#21)

* Rewrote code from reference solution

* Add pySymbolKind

* Fix pySymbolKind and add pySymbolName

* Add tests for documentSymbolCommand

* Fix code

* Update pySymbolName

* Added kotlin support and change DocumentSymbolPsiVisitor

* Add kotlin tests

* Fix kotlin tests

* Change visitor logic

* Change functions for work like Pylance

* Rewrote tests for documentSymbol

* Make LspCommand.LOG private

* Change log for DocumentSymbolCommand

* Fix code by comments

* peer review corrections

* Simplify code

* Delete redundant class. Add response structure

Co-authored-by: Sergey.Anchipolevsky <serganch@gmail.com>

* quick fixes first success

* test on quick fixes

* quick fixes improvements

* fixing erroneous merge after rebase

* commented code cleanup

* minor

Co-authored-by: Deuqz <57059124+Deuqz@users.noreply.github.com>
Co-authored-by: ramazan <rmzs0711@yandex.ru>